---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:16:30
   |
14 | type A = Value["int" | str]  # OK
15 |
16 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^
17 |
18 | x: ("int"  # TC010 (unsafe fix)
   |

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:21:25
   |
19 |       " | str" | None)
20 |
21 |   OldT = TypeVar("OldT", ("int"  # TC010 (unsafe fix)
   |  _________________________^
22 | |                         " | str" | None))
   | |________________________________^
